[package]
name = "writhing_mass_of_flesh"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Janzen"]
description = "Creates a procedurally generated image that sort of looks like bubbles"
repository = "https://github.com/JacobJanzen/Bubbles/"
license = "GPL-3.0"
keywords = ["generative-art","gif"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gif = "0.11.4"
rand = "0.8.5"
clap = { version = "3.2.17", features = ["derive"]}
termsize = "0.1.6"
